Edited wiki page Wishlist through web user interface.

--- a/wiki/Wishlist.wiki
+++ b/wiki/Wishlist.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary One-List of features needed.
 
 = Wishlist =
 
@@ -6,18 +6,13 @@ Below is a list of features that should / has already been added with noteworthy
 
 || *Feature* ||  *Comment* || *Priority* ||
 || MPI parallelization  || Use of some Java port, which one? ||Medium ||
-|| XML input and output ||  ||  ||
-|| Multicore parallelization ||  ||  ||
-|| Program manuals auto-generated from Javadoc ||  ||  ||
-|| Unit testing framework ||  ||  ||
-|| GCC option parsing ||  ||  ||
-||Logging  ||  ||  ||
-|| Build system ||  ||  ||
-|| Bug-tracking ||  ||  ||
-|| Profiling tool ||  || Not of major importance in the beginning, but surely later. ||
-|| Numeric methods package. ||  ||  ||
-||  ||  ||  ||
-||  ||  ||  ||
-||  ||  ||  ||
-||  ||  ||  ||
-||  ||  ||  ||
+|| XML input and output ||  || Low ||
+|| Multicore parallelization ||  || Low ||
+|| Program manuals auto-generated from Javadoc ||  || Low ||
+|| Unit testing framework || Now using JUnit. || In place ||
+|| GCC option parsing || Now using JCommander. Not quite pure GNU style though. || In place  ||
+||Logging "Logback" or "log4j"? ||  || Low ||
+|| Build system  || Now using Maven, See Maven JAR plugin for packaging. || In place |
+|| Bug-tracking || Now using issue tracking within Google Code. || In place ||
+|| Profiling tool ||  Not of major importance for now. || Low ||
+|| Numeric methods package. || JBLAS (using JNI) or pure Java implementation? See e.g. http://code.google.com/p/java-matrix-benchmark/, or http://ojalgo.org/matrix%5Fcompare.html, or http://stackoverflow.com/questions/529457/performance-of-java-matrix-math-libraries. || Medium ||
