Edited wiki page GettingStartedDeveloping through web user interface.

--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -25,4 +25,4 @@ The latest verified version is shown within brackets.
   * Builds and dependencies are handled using Maven. Always add additional dependencies using the pom.xml or similarly. Maven is extremely capable.
   * Logging is not handled with the built-in logger, but rather Logback or log4j (not decided yet).
   * Bug tracking is handled using the Issues page here at Google Code.
-  * Application parameter parsing can be achieved in (somewhat) GNU style using dependency JCommander.
+  * Application parameter parsing can be achieved in (somewhat) GNU style using JCommander.
