Edited wiki page GettingStartedDeveloping through web user interface.

--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -5,17 +5,17 @@
 
 == Installation instructions ==
 
-Below summary refers to Eclipse. Use of _NetBeans_, etc. should be similar.
+Below summary refers to Eclipse. Use of NetBeans, etc. should be similar.
 The latest verified version is shown within brackets.
 
   # Download and install _Eclipse_.
   # Download and Install required development tools:
-    * Install _Maven_.
+    * Install Maven.
     * Possibly install external Subversion (SVN) client if Subversive not sufficient (see below).
   # Install recommended Eclipse plugins:
-    * _ Java Development Tools_, if not already in place.
-    * _Subversive_ with _SVNKit_ or similarly, which enables SVN handling from within the IDE.
-    * _Maven Integration for Eclipse_.
+    * Java Development Tools, if not already in place.
+    * Subversive_ with SVNKit or similarly, which enables SVN handling from within the IDE.
+    * Maven Integration for Eclipse.
   # Go to the SVN Repository Exploring perspective and add the repository. The location, your username and password can be found under the Source page on the wiki.
   # In the Java perspective, add the project as an existing SVN project. You might have to browse for the trunk.
   # Activate Maven for the project.
