Edited wiki page GettingStartedDeveloping through web user interface.

--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -14,7 +14,7 @@ The latest verified version is shown within brackets.
     * Possibly install external Subversion (SVN) client if Subversive not sufficient (see below).
   # Install recommended Eclipse plugins:
     * Java Development Tools, if not already in place.
-    * Subversive_ with SVNKit or similarly, which enables SVN handling from within the IDE.
+    * Subversive with SVNKit or similarly, which enables SVN handling from within the IDE.
     * Maven Integration for Eclipse.
   # Go to the SVN Repository Exploring perspective and add the repository. The location, your username and password can be found under the Source page on the wiki.
   # In the Java perspective, add the project as an existing SVN project. You might have to browse for the trunk.
