--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -1,4 +1,4 @@
-#summary How to get started as a developer (not end user).
+#summary How to get started as a developer (not an end-user).
 #labels Phase-Design,Phase-Implementation,Phase-QA
 
 = Getting started developing =
