Edited wiki page GettingStartedDeveloping through web user interface.

--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -24,7 +24,7 @@ The latest verified version is shown within brackets.
 == Good to know ==
   * Make sure that only things that should be kept under version control goes into SVN. Dot directories, target directories, external dependencies, etc. should be added to svn:ignore.
   * Builds and dependencies are handled using Maven. Always add additional dependencies using the pom.xml or similarly. Maven is extremely capable.
-  * Logging is not handled with the built-in logger, but rather Logback or log4j (not decided yet).
+  * Logging is not handled with the built-in logger, but with Logback.
   * Bug tracking is handled using the Issues page here at Google Code.
   * Application parameter parsing can be achieved in (somewhat) GNU style using JCommander.
   * Unit tests and test suites are handled with JUnit. Test reside under the src/test/java folder in a package structure which is aligned with that of the source code.
