Edited wiki page GettingStartedDeveloping through web user interface.

--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -1,5 +1,5 @@
 #summary How to get started as a developer (not an end-user).
-#labels Phase-Design,Phase-Implementation,Phase-QA
+#labels Phase-Design,Phase-Implementation,Phase-QA,Featured
 
 = Getting started developing =
 
