--- a/wiki/Wishlist.wiki
+++ b/wiki/Wishlist.wiki
@@ -7,7 +7,7 @@ Below is a list of features that should / has already been added with noteworthy
 
 || *Feature* ||  *Comment* || *Priority* ||
 || MPI parallelization  || Use of some Java port, which one? || Medium ||
-|| XML input and output || External library required for condensed XML? || Low ||
+|| XML input and output || External library required for condensed XML? || Medium ||
 || Multicore parallelization ||  || Low ||
 || Program manuals auto-generated from Javadoc ||  || Low ||
 || Unit testing framework || Now using JUnit. || In place ||
