--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -8,7 +8,7 @@
 Below summary refers to Eclipse. Use of !NetBeans, etc. should be similar.
 The latest verified version is shown within brackets.
 
-  # Download and install Eclipse [Eclipse !Helios].
+  # Download and install Eclipse [Eclipse Helios].
   # Download and Install required tools:
     * Install Maven [Maven !2].
     * Possibly install external Subversion (SVN) client if Subversive not sufficient (see below).
