Edited wiki page Wishlist through web user interface.

--- a/wiki/Wishlist.wiki
+++ b/wiki/Wishlist.wiki
@@ -1,5 +1,5 @@
 #summary List of features needed.
-#labels Phase-Requirements,Phase-Design,Featured
+#labels Phase-Requirements,Phase-Design
 
 = Wishlist =
 
