--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -32,7 +32,7 @@ The source file structure adheres to the Maven standard directory layout (as a s
   * src/main/java - where main source code goes. Note that there is a package for applications and tools, but that that these are not separated.
   * src/test/java - where unit tests and test suites go.
   * target - where local builds are kept (not under version control).
-  * lib - where non-Mavenized dependencies are held, see below.
+  * lib - where non-Mavenized dependencies are kept, see below.
 
 == Dependencies ==
 Maven handles all external dependencies (most commonly JAR files). Typically, for a user, dependencies are retrieved and stored under the ~/.m2 folder. When there is a need for a new dependency, do the following:
