--- a/wiki/GettingStartedDeveloping.wiki
+++ b/wiki/GettingStartedDeveloping.wiki
@@ -35,9 +35,10 @@ The source file structure adheres to the Maven standard directory layout (as a s
   * lib - where non-Mavenized dependencies are kept, see below.
 
 == Dependencies ==
-Maven handles all external dependencies (most commonly JAR files). Typically, for a user, dependencies are retrieved and stored under the ~/.m2 folder. When there is a need for a new dependency, do the following:
-  # Try searching for the dependency using the interface shown for pom.xml in the source root. If it is found, just add it. Note that work versions (as opposed to proper releases) are often denoted SNAPSHOT.
-  # If the dependency does not exist in an open Maven repository, one must use a workaround. Currently, this consists of adding the JAR to the lib folder in the SVN repository and then adding a system scope reference to the JAR in pom.xml (typically without aid of the interface). 
+Maven handles all external dependencies (most commonly JAR files). Typically, for a user, true Mavenized dependencies (and sub-dependencies!) are retrieved and stored under the ~/.m2 folder.
+When there is a need for a new dependency, do the following:
+  # Try searching for it using the interface shown for pom.xml in the source root. If it is found, just add it. Note that work versions (as opposed to proper releases) are often denoted SNAPSHOT.
+  # If it does not exist in an open Maven repository, one must use a workaround. Currently, this consists of adding the JAR file to the lib folder in the SVN repository and then adding a system scope mock reference to the JAR in pom.xml (typically without aid of the interface). 
 
 == Testing ==
 Unit tests and test suites are handled with JUnit. Tests reside under the src/test/java folder in a package structure  aligned with that of the source code. Maven can be told to run test suites when building.
