--- a/jprime/src/main/java/se/cbb/jprime/mcmc/TODO.txt
+++ b/jprime/src/main/java/se/cbb/jprime/mcmc/TODO.txt
@@ -1,14 +1,13 @@
 To do (not only w.r.t. mcmc package):
 
-- Finish implementing Probability.
 - Write unit tests for Probability.
-- If necessary, create wrapper around MersenneTwister for supporting
-  seed tracking and XML serialisation.
-- Implement single-object selecting ProposerSelector.
-- Implement MCMCManager.
+- Implement TruncatedNormalProposer.
+- Implement Metropolis-Hastings proposal acceptor.
+- Implement NormalDistribution.
+- Implement MCMC hello world example app.
 
+Later on:
+- Implement hill climbing proposal acceptor.
+- Implement ExponentialDistribution.
+- Implement GammaDistribution.
 
-To remember:
-
-- When selecting multiple proposers, one must make sure the same state parameter is
- not affected multiple times, or else the Q(x;x')/Q(x';x) ratio will be incorrect.
