--- a/wiki/DevelopersGuide.wiki
+++ b/wiki/DevelopersGuide.wiki
@@ -24,27 +24,27 @@ The latest verified version is shown within brackets.
   # Start coding! (...possibly by creating a new branch first!)
 
 == Version control ==
-As mentioned, the source code is under version control using Subversion (SVN). Please note that "dot directories", target directories, and similar should not be under version control, i.e. they should be added to svn:ignore.
+As mentioned, the source code is under version control using Subversion (SVN). Please note that "dot directories", target directories, and similar should not be under version control, i.e. they should be added to {{{svn:ignore}}}.
 
 == Builds ==
 Builds are handled using the very competent (and alas complex) framework Maven. In particular, Maven takes care of all external dependencies (see also below). One may build a project JAR file using the Maven JAR plugin.
 
 == File structure ==
 The source file structure adheres to the Maven standard directory layout (as a subset thereof). Before adding new root folders, consider using a folder name proposed by this standard. Of particular importance are:
-  * src/main/java - where main source code goes. Note that there is a package for applications and tools, but that that these are not separated.
-  * src/test/java - where unit tests and test suites go.
-  * target - where local builds are kept (not under version control).
-  * lib - where non-Mavenized dependencies are kept, see below.
-Furthermore, non-Java resources kan be maintained in the same manner, e.g. src/main/python and so forth.
+  * {{{src/main/java}}} - where main source code goes. Note that there is a package for applications and tools, but that that these are not separated.
+  * {{{src/test/java}}} - where unit tests and test suites go.
+  * {{{target}}} - where local builds are kept (not under version control).
+  * {{{lib}}} - where non-Mavenized dependencies are kept, see below.
+Furthermore, non-Java resources kan be maintained in the same manner, e.g. {{{src/main/python}}} and so forth.
 
 == Dependencies ==
-Maven handles all external dependencies (most commonly JAR files). Typically, for a user, true Mavenized dependencies (and sub-dependencies!) are retrieved and stored under the ~/.m2 folder.
+Maven handles all external dependencies (most commonly JAR files). Typically, for a user, true Mavenized dependencies (and sub-dependencies!) are retrieved and stored under the {{{~/.m2}}} folder.
 When there is a need for a new dependency, do the following:
-  # Try searching for it using the interface shown for pom.xml in the source root. If it is found, just add it. Note that work versions (as opposed to proper releases) are often denoted SNAPSHOT.
-  # If it does not exist in an open Maven repository, one must use a workaround. Currently, this consists of adding the JAR file to the lib folder in the SVN repository and then adding a system scope mock reference to the JAR in pom.xml (typically without aid of the interface). 
+  # Try searching for it using the interface shown for {{{pom.xml}}} in the source root. If it is found, just add it. Note that work versions (as opposed to proper releases) are often denoted SNAPSHOT.
+  # If it does not exist in an open Maven repository, one must use a workaround. Currently, this consists of adding the JAR file to the {{{lib}}} folder in the SVN repository and then adding a system scope mock reference to the JAR in {{{pom.xml}}} (typically without aid of the interface). 
 
 == Testing ==
-Unit tests and test suites are handled with JUnit. Tests reside under the src/test/java folder in a package structure  aligned with that of the source code. Maven can be told to run test suites when building.
+Unit tests and test suites are handled with JUnit. Tests reside under the {{{src/test/java}}} folder in a package structure  aligned with that of the source code. Maven can be told to run test suites when building.
 
 == Bug tracking ==
 Bug tracking is handled using the Issues page here at Google Code.
@@ -59,4 +59,4 @@ Parameter parsing can be achieved in (almost) GNU style using the dependency JCo
 At the moment, ordinary XML tasks should be carried out with JAXB if possible.
 
 == Bioinformatics ==
-Biojava should sufficient for most common bioinformatics tasks involving alignments and such. 
+!BioJava 3 should be sufficient for most common bioinformatics tasks involving alignments and such. 
