Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -2,9 +2,14 @@
 
 = GSRf =
 
-JPrIME-GSRf is a phylogenetic application for reconciling a guest tree and a host tree by means of duplication events and loss events. It relies on Bayesian inference of model parameters using an MCMC framework.
+JPrIME-GSRf is a phylogenetic application for reconciling a guest tree and a host tree by means of duplication events and loss events. Typically, the guest tree corresponds to a gene tree, and the host tree corresponds to a species tree. JPrIME-GSRf relies on Bayesian inference of model parameters using an MCMC framework. Thus, it will yield a posterior distribution of e.g. guest tree topologies.
 
-
+{{{Input:
+  1) a dated host tree
+  2) a multialignment of guest tree leaf sequences
+  3) a simple map relating the guest tree leaves to host tree leaves
+}}}
+ 
 
 
 = Details =
