Edited wiki page GSRf through web user interface.

--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -2,19 +2,17 @@
 
 = GSRf =
 
-JPrIME-GSRf is a phylogenetic application for reconciling a guest tree and a host tree by means of duplication events and loss events. Typically, the guest tree corresponds to a gene tree, and the host tree corresponds to a species tree. JPrIME-GSRf relies on Bayesian inference of model parameters using an MCMC framework. Thus, it will yield a posterior distribution of e.g. guest tree topologies.
+JPrIME-GSRf is a phylogenetic application for reconciling an unknown guest tree and a known host tree by means of duplication events and loss events. Typically, the guest tree corresponds to a gene tree, and the host tree corresponds to a species tree. JPrIME-GSRf relies on Bayesian inference of model parameters using an MCMC framework. Thus, it will yield a posterior distribution of e.g. guest tree topologies.
 
 Input:
-  # a dated host tree
-  # a multialignment of guest tree leaf sequences
-  # a simple map relating the guest tree leaves to host tree leaves
+  # a file with a dated host tree.
+  # a file with multialignment of guest tree leaf sequences.
+  # a file with a simple map relating the guest tree leaves to host tree leaves.
 
+Output:
+  # a file with samples drawn from the posterior distribution.
+
+== Running ==
  
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+=== Host tree ===
+Obtain a dated species tree in Newick format. The dates may be specified as branch lengths, or as absolute times using special formatting, e.g.:
