--- a/wiki/GSRf.wiki
+++ b/wiki/GSRf.wiki
@@ -2,17 +2,20 @@
 
 = GSRf =
 
-JPrIME-GSRf is a phylogenetic application for reconciling an unknown guest tree and a known host tree by means of duplication events and loss events. Typically, the guest tree corresponds to a gene tree, and the host tree corresponds to a species tree. JPrIME-GSRf relies on Bayesian inference of model parameters using an MCMC framework. Thus, it will yield a posterior distribution of e.g. guest tree topologies.
+JPrIME-GSRf is a phylogenetic application for reconciling an unknown guest tree and a known host tree by means of duplication events and loss events. Typically, the guest tree corresponds to a gene tree, and the host tree corresponds to a species tree. JPrIME-GSRf relies on Bayesian inference using an MCMC framework. Thus, it will yield a posterior distribution of guest tree topologies and remaining parameters.
 
-Input:
+*Input:*
   # a file with a dated host tree.
   # a file with multialignment of guest tree leaf sequences.
   # a file with a simple map relating the guest tree leaves to host tree leaves.
 
-Output:
+*Output:*
   # a file with samples drawn from the posterior distribution.
 
 == Running ==
  
 === Host tree ===
-Obtain a dated species tree in Newick format. The dates may be specified as branch lengths, or as absolute times using special formatting, e.g.:
+Obtain a dated species tree in Newick format. The dates may be specified as branch lengths, or as absolute times using special formatting, e.g.
+{{{((A:0.4,B:0.4):0.6,C:1.0):0.5;}}}
+or analogously
+{{{((A[&&PRIME NT=0.0],B[&&PRIME NT=0.0])[&&PRIME NT=0.4],C[&&PRIME NT=0.0])[&&PRIME NT=1.0][&&PRIME TT=0.5];}}}.
